SERVER-56778 Shell includes API params in w: 0 writes